<resources>
    <string name="app_name">PlayMate</string>
    <string name="authorisation">Авторизация</string>
    <string name="nickname_auth">Никнейм</string>
    <string name="password_auth">Пароль</string>
    <string name="btn_auth">Авторизоваться</string>
    <string name="title_persons">Лента</string>
    <string name="title_chats">Диалоги</string>
    <string name="title_chats_concrete">Ваши диалоги</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>