<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chats">

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.android_app.ui.Activities.ChatsFragment"
        android:label="@string/title_chats_concrete"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_persons"
        android:name="com.example.android_app.ui.Activities.PersonsFragment"
        android:label="@string/title_persons"
        tools:layout="@layout/fragment_persons" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.android_app.ui.Activities.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>