<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <!-- Login form -->
    <ImageView
        android:id="@+id/RegistrationBackgrnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:scaleY="1.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backgrnd_welcome_page" />

    <LinearLayout
        android:id="@+id/auth"
        android:layout_width="300sp"
        android:layout_height="200sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/RegistrationBackgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bitter"
            android:gravity="top|center"
            android:text="@string/authorisation"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/NicknameTextField"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/login_button_border"
            android:font="@font/roboto_light"
            android:gravity="start|center"
            android:hint="@string/nickname_auth"
            android:inputType="textPersonName"
            android:paddingStart="10sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/PasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/login_button_border"
            android:font="@font/roboto_light"
            android:gravity="start|center"
            android:hint="@string/password_auth"
            android:inputType="textPassword"
            android:paddingStart="10sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/InPageAuthBtn"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/registration_button_border_white"
            android:font="@font/roboto_light"
            android:gravity="center"
            android:text="@string/btn_auth"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bitter"
                android:gravity="center"
                android:text="Ещё нет учетной записи?"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/GoToRegBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/bitter"
                android:text="Зарегистрируйтесь"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/AuthFred"
        android:layout_width="260sp"
        android:layout_height="275sp"
        app:layout_constraintBottom_toBottomOf="@+id/RegistrationBackgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319"
        app:srcCompat="@drawable/fred_log_01" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bitter"
        android:gravity="top|center"
        android:text="С возвращением!\nЯ очень рад видеть тебя снова!"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/RegistrationBackgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />


</androidx.constraintlayout.widget.ConstraintLayout>